# StellarEv_emulator

./: .gitignore  1DTime_model_hyperparam.py  1DTime_model_train.py  1DTime_model_train_timeseries.py  README.md  arch_LSTM_DON_v2.py  arch_grid_split_don.py  compare_diff.py  compare_log.py  data_maker.py  main_LSTM_DON_v2.py  main_grid_split_don.py  main_log15.py  main_log15_time.py  main_log15_time_diff.py  main_log15_timeconcatenated.py  main_time_diff.py  make_inference_log.py  make_inferences_diff.py  make_inferences_diff_bk.py  make_inferences_log.py  optuna_visualize.py  params_loader.py  plot_combined.py  plot_combined_diff.py  plot_interpolation.py  predict_complete.py  pyproject.toml  train_grid_split_don.py  train_grid_split_don_pos.py  train_grid_split_don_pos_diff.py  train_v2.py  utils.py
checkpoints_new/deeponet_params_new_log15_output/checkpoint_0/: _CHECKPOINT_METADATA  _METADATA  _sharding  manifest.ocdbt
checkpoints_new/deeponet_params_new_log15_output/checkpoint_0/array_metadatas/: process_0
checkpoints_new/deeponet_params_new_log15_output/checkpoint_0/ocdbt.process_0/: manifest.ocdbt
checkpoints_new/deeponet_params_new_log15_time/checkpoint_0/: _CHECKPOINT_METADATA  _METADATA  _sharding  manifest.ocdbt
checkpoints_new/deeponet_params_new_log15_time/checkpoint_0/array_metadatas/: process_0
checkpoints_new/deeponet_params_new_log15_time/checkpoint_0/ocdbt.process_0/: manifest.ocdbt
hyperprameter_results/: optuna_visualize.py
